--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.24.0",
+    "framer-motion": "^4",
     "next": "12.0.7",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
